[package]
authors = ["Digant Kasundra <digant@dropbox.com>"]
name = "hoppler"
version = "0.1.0"
repository = "https://github.com/ZeroCostGoods/hoppler"
license = "MIT OR Apache-2.0"


[dependencies]
rocket = "0.2.2"
rocket_codegen = "0.2.2"
rocket_contrib = "0.2.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_yaml = "0.6.2"

[dependencies.diesel]
features = ["mysql"]
version = "0.11.0"

[dependencies.diesel_codegen]
features = ["mysql"]
version = "0.11.0"
